fix mobile info spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -369,6 +369,12 @@ h4 {
 		text-align: center;
 	}
 
+	.banner-container {
+		display: block;
+		margin: 0 auto;
+		width: 100%;
+	}
+
 	.instructions {
 		margin: 0;
 		margin-bottom: 30px;
